--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
 <meta charset="utf-8">
 <title>PGA Golf Challenge</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
   <link rel="stylesheet" href="css/bootstrap-responsive.css">
   <link rel="stylesheet" href="css/bootstrap.css">
   <link rel="stylesheet" href="css/style.css">
@@ -16,11 +18,56 @@
   </script>
 
   <script type="text/x-handlebars" data-template-name="index">
+    <h3>Edit Bracket</h3>
+    <div class="row-fluid">
+      <div class="progress big">
+        <div class="bar bar-info" {{bindAttr style="controller.spentBarStyle"}}>
+          {{bracket.spent}} Points Spent
+        </div>
+        <div class="bar bar-success" {{bindAttr style="controller.availableBarStyle"}}>
+          {{bracket.pointsAvailable}} Points Available
+        </div>
+    </div>
+    <div class="row-fluid">
+      <div class="span6">
+        <h4>My Golfers <small>({{controller.selectedGolfers.length}} golfers, {{bracket.spent}} points spent)</small></h4>
+        <ol class="unstyled">
+        {{#each golfer in controller.selectedGolfers}}
+          <li>
+            <button class="btn btn-danger pull-right" {{action "removeGolfer" golfer}}>
+              <i class="icon-minus icon-white"></i>
+              Remove Golfer
+            </button>
+            <strong>{{golfer.name}}</strong><br/>
+            <em>{{golfer.cost}} points</em>
+          </li>
+        {{/each}}
+        </ol>
+      </div>
+
+      <div class="span6">
+        <h4>Available Golfers <small>({{controller.availableGolfers.length}} golfers cost {{bracket.pointsAvailable}} points or less)</small></h4>
+        {{input valueBinding="controller.availableGolferFilter"}}
+        <ol class="unstyled">
+        {{#each golfer in controller.availableGolfers}}
+          <li>
+            <button class="btn btn-success pull-right" {{action "addGolfer" golfer}}>
+              <i class="icon-plus icon-white"></i>
+              Add Golfer
+            </button>
+            <strong>{{golfer.name}}</strong><br/>
+            <em>{{golfer.cost}} points</em>
+          </li>
+        {{/each}}
+        </ol>
+      </div>
+    </div>
   </script>
 
   <script src="js/libs/jquery-1.9.1.js"></script>
   <script src="js/libs/handlebars-1.0.0-rc.4.js"></script>
   <script src="js/libs/ember-1.0.0-rc.6.js"></script>
+  <script src="js/libs/ember-data.js"></script>
   <script src="js/app.js"></script>
 
 </body>
