Fixed mobile layout.

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <div class="row-fluid">
       <div class="span2 hidden-phone"></div>
-      <div class="span8 hidden-phone">
+      <div class="span12 main">
         {{outlet}}
       </div>
       <div class="span2 hidden-phone"></div>
