--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body class="container-fluid">
 
   <script type="text/x-handlebars">
-    <h2 class="text-center">Welcome to PGA Golf Challenge</h2>
+    <h2 class="text-center">PGA Golf Challenge</h2>
 
     <div class="row-fluid">
       <div class="span2 hidden-phone"></div>
