--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
   <script src="js/libs/handlebars-1.0.0-rc.4.js"></script>
   <script src="js/libs/ember-1.0.0-rc.6.js"></script>
   <script src="js/libs/ember-data.js"></script>
+  <script src="js/libs/ember-parse-adapter-0.2.2.js"></script>
   <script src="js/app.js"></script>
 
 </body>
