--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
   </script>
 
   <script type="text/x-handlebars" data-template-name="index">
+    {{#if model.bracket.isLoaded}}
     <h3 class="text-center">Edit Your Bracket</h3>
 
     <div class="progress big">
@@ -68,6 +69,9 @@
       </li>
     {{/each}}
     </ol>
+    {{else}}
+      <p class="text-center text-info"><em>Loading bracket...</em></p>
+    {{/if}}
   </script>
 
   <script src="js/libs/jquery-1.9.1.js"></script>
