Moved models into separate files.

--- a/index.html
+++ b/index.html
@@ -80,6 +80,8 @@
   <script src="js/libs/ember-data.js"></script>
   <script src="js/libs/ember-parse-adapter-0.2.2.js"></script>
   <script src="js/app.js"></script>
+  <script src="js/models/bracket.js"></script>
+  <script src="js/models/golfer.js"></script>
 
 </body>
 </html>
