Changed index to brackets/edit.

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </div>
   </script>
 
-  <script type="text/x-handlebars" data-template-name="index">
+  <script type="text/x-handlebars" data-template-name="brackets/edit">
     {{#if model.bracket.isLoaded}}
     <h3 class="text-center">Edit Your Bracket</h3>
 
