--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
   <script src="js/app.js"></script>
   <script src="js/models/bracket.js"></script>
   <script src="js/models/golfer.js"></script>
+  <script src="js/controllers/brackets_edit_controller.js"></script>
 
 </body>
 </html>
