Moved BracketsEditRoute into separate file.

--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@
   <script src="js/models/bracket.js"></script>
   <script src="js/models/golfer.js"></script>
   <script src="js/controllers/brackets_edit_controller.js"></script>
+  <script src="js/routes/brackets_edit_route.js"></script>
 
 </body>
 </html>
