Added navbar header.

--- a/index.html
+++ b/index.html
@@ -12,7 +12,15 @@
 <body class="container-fluid">
 
   <script type="text/x-handlebars" data-template-name="application">
-    <h2 class="text-center">PGA Golf Challenge</h2>
+    <div class="navbar navbar-static-top">
+      <div class="navbar-inner">
+        <a class="brand" href="#">PGA Golf Challenge</a>
+        <ul class="nav">
+          <li><a href="#/brackets/C2OkmPoiOe/edit">Bracket</a></li>
+          <li><a href="#/achievements">Achievements</a></li>
+        </ul>
+      </div>
+    </div>
 
     <div class="row-fluid">
       <div class="span2 hidden-phone"></div>
