Added cancel button to achievements/award.

--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
       <button class="btn btn-info" {{action "award"}}>
         <i class="icon-star icon-white"></i> Award Achievement
       </button>
+      <a class="btn" href="#/achievements">Cancel</a>
       </div>
     </div>
     {{else}}
