Updated achievement info on achievements/index.

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <i class="icon-star icon-white"></i> Award
           </button>
           <strong>{{translate achievement.type}} &dash; {{translate achievement.key}}</strong><br/>
-          <em>{{achievement.points}} Points, {{achievement.golfers.length}} golfers.</em>
+          <em>{{achievement.points}} Points, awarded {{achievement.golferAchievements.length}} time(s) to {{achievement.golfers.length}} golfers.</em>
         </li>
       {{/each}}
     </ul>
