Changed edit bracket button style.

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
   <script type="text/x-handlebars" data-template-name="brackets/show">
     <h3 class="text-center">Your Bracket</h3>
-    {{#linkTo brackets.edit model class="btn btn-warning top-action top-action-right"}}
+    {{#linkTo brackets.edit model class="btn btn-primary top-action top-action-right"}}
       <i class="icon-edit icon-white"></i> Edit
     {{/linkTo}}
     <table class="table">
