Fixed html on achievements/index.

--- a/index.html
+++ b/index.html
@@ -49,9 +49,10 @@
               <i class="icon-star icon-white"></i> Award
             </button>
           </td>
-        </li>
+        </tr>
       {{/each}}
-    </ul>
+      </tbody>
+    </table>
   </script>
 
   <script type="text/x-handlebars" data-template-name="achievements/award">
