Updated index route and navbar link to point to Bracket 1.

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <div class="navbar-inner">
         <a class="brand" href="#">PGA Golf Challenge</a>
         <ul class="nav">
-          <li><a href="#/brackets/C2OkmPoiOe">Bracket</a></li>
+          <li><a href="#/brackets/1">Bracket</a></li>
           <li><a href="#/achievements">Achievements</a></li>
         </ul>
       </div>
