--- a/public/index.html
+++ b/public/index.html
@@ -97,7 +97,12 @@
       <tbody>
         {{#each golfer in bracket.golfers}}
           <tr>
-            <td class="text-center">#{{golfer.rank}}</td>
+            <td class="text-center" style="position:relative;">
+              <strong style="text-shadow:0px 0px 8px white;">{{golfer.rank}}</strong>
+              <div style="z-index:-1;position:absolute;top:0;left:0;right:0;bottom:0;">
+                <img src="/img/country-flag-icons/England-Flag.png" style="opacity:0.3;height:36px;"/>
+              </div>
+            </td>
             <td>{{golfer.name}}</td>
             <td></td>
             <th class="text-right">{{golfer.score}}</th>
