--- a/public/index.html
+++ b/public/index.html
@@ -209,6 +209,7 @@
   <script src="js/models/golfer.js"></script>
   <script src="js/models/golfer_achievement.js"></script>
   <script src="js/models/bracket_golfer.js"></script>
+  <script src="js/models/country.js"></script>
   <script src="js/controllers/achievements_index_controller.js"></script>
   <script src="js/controllers/achievements_award_controller.js"></script>
   <script src="js/controllers/brackets_edit_controller.js"></script>
