--- a/public/index.html
+++ b/public/index.html
@@ -100,10 +100,13 @@
             <td class="text-center" style="position:relative;">
               <strong style="text-shadow:0px 0px 8px white;">{{golfer.rank}}</strong>
               <div style="z-index:-1;position:absolute;top:0;left:0;right:0;bottom:0;">
-                <img src="/img/country-flag-icons/England-Flag.png" style="opacity:0.3;height:36px;"/>
+                {{view App.FlagView countryBinding="golfer.country"}}
               </div>
             </td>
-            <td>{{golfer.name}}</td>
+            <td>
+              <strong>{{golfer.name}}</strong><br/>
+              {{golfer.country.name}}
+            </td>
             <td></td>
             <th class="text-right">{{golfer.score}}</th>
           </tr>
@@ -218,6 +221,7 @@
   <script src="js/routes/achievements_award_route.js"></script>
   <script src="js/routes/brackets_edit_route.js"></script>
   <script src="js/routes/brackets_show_route.js"></script>
+  <script src="js/views/flag_view.js"></script>
 
 </body>
 </html>
