--- a/public/index.html
+++ b/public/index.html
@@ -100,7 +100,7 @@
             <td class="text-center" style="position:relative;">
               <strong style="text-shadow:0px 0px 8px white;">{{golfer.rank}}</strong>
               <div style="z-index:-1;position:absolute;top:0;left:0;right:0;bottom:0;">
-                {{view App.FlagView countryBinding="golfer.country"}}
+                {{flag countryBinding="golfer.country"}}
               </div>
             </td>
             <td>
