Fixed missing flags.

--- a/public/index.html
+++ b/public/index.html
@@ -99,7 +99,7 @@
           <tr>
             <td class="text-center" style="position:relative;">
               <strong style="text-shadow:0px 0px 8px white;">{{golfer.rank}}</strong>
-              <div style="z-index:-1;position:absolute;top:0;left:0;right:0;bottom:0;">
+              <div style="position:absolute;top:0;left:0;right:0;bottom:0;">
                 {{flag countryBinding="golfer.country"}}
               </div>
             </td>
@@ -159,7 +159,7 @@
         <tr>
           <td class="text-center" style="position:relative;">
             <strong style="text-shadow:0px 0px 8px white;">{{golfer.rank}}</strong>
-            <div style="z-index:-1;position:absolute;top:0;left:0;right:0;bottom:0;">
+            <div style="position:absolute;top:0;left:0;right:0;bottom:0;">
               {{flag countryBinding="golfer.country"}}
             </div>
           </td>
@@ -190,7 +190,7 @@
         <tr>
           <td class="text-center" style="position:relative;">
             <strong style="text-shadow:0px 0px 8px white;">{{golfer.rank}}</strong>
-            <div style="z-index:-1;position:absolute;top:0;left:0;right:0;bottom:0;">
+            <div style="position:absolute;top:0;left:0;right:0;bottom:0;">
               {{flag countryBinding="golfer.country"}}
             </div>
           </td>
