--- a/public/index.html
+++ b/public/index.html
@@ -218,6 +218,7 @@
   <script src="js/libs/handlebars-1.0.0-rc.4.js"></script>
   <script src="js/libs/ember-1.0.0-rc.6.js"></script>
   <script src="js/libs/ember-data.js"></script>
+  <script src="js/libs/fastclick.js"></script>
   <script src="js/app.js"></script>
   <script src="js/translations.js"></script>
   <script src="js/helpers/translate.js"></script>
