Hiding add/remove button text on smallest breakpoints.

--- a/public/index.html
+++ b/public/index.html
@@ -170,7 +170,7 @@
           </td>
           <td>
             <button class="btn btn-danger pull-right" {{action "removeGolfer" bracketGolfer}}>
-              <i class="icon-minus icon-white"></i> Remove
+              <i class="icon-minus icon-white"></i><span class="hidden-phone"> Remove</span>
             </button>
           </td>
           {{/with}}
@@ -201,7 +201,7 @@
           </td>
           <td>
             <button class="btn btn-success pull-right" {{action "addGolfer" golfer}}>
-              <i class="icon-plus icon-white"></i> Add
+              <i class="icon-plus icon-white"></i><span class="hidden-phone"> Add</span>
             </button>
           </td>
         </tr>
