Only hiding button text on smallest breakpoint.

--- a/public/index.html
+++ b/public/index.html
@@ -46,7 +46,7 @@
           </td>
           <td>
             <button class="btn btn-info pull-right" {{action "awardAchievement" achievement}}>
-              <i class="icon-star icon-white"></i> Award
+              <i class="icon-star icon-white"></i><span class="hidden-phone-portrait"> Award</span>
             </button>
           </td>
         </tr>
@@ -170,7 +170,7 @@
           </td>
           <td>
             <button class="btn btn-danger pull-right" {{action "removeGolfer" bracketGolfer}}>
-              <i class="icon-minus icon-white"></i><span class="hidden-phone"> Remove</span>
+              <i class="icon-minus icon-white"></i><span class="hidden-phone-portrait"> Remove</span>
             </button>
           </td>
           {{/with}}
@@ -201,7 +201,7 @@
           </td>
           <td>
             <button class="btn btn-success pull-right" {{action "addGolfer" golfer}}>
-              <i class="icon-plus icon-white"></i><span class="hidden-phone"> Add</span>
+              <i class="icon-plus icon-white"></i><span class="hidden-phone-portrait"> Add</span>
             </button>
           </td>
         </tr>
