--- a/public/index.html
+++ b/public/index.html
@@ -214,31 +214,31 @@
     {{/if}}
   </script>
 
-  <script src="js/libs/jquery-1.9.1.js"></script>
-  <script src="js/libs/handlebars-1.0.0-rc.4.js"></script>
-  <script src="js/libs/ember-1.0.0-rc.6.js"></script>
-  <script src="js/libs/ember-data.js"></script>
-  <script src="js/libs/fastclick.js"></script>
-  <script src="js/app.js"></script>
-  <script src="js/translations.js"></script>
-  <script src="js/helpers/translate.js"></script>
-  <script src="js/helpers/select_field_helper.js"></script>
-  <script src="js/helpers/pluralize.js"></script>
-  <script src="js/models/achievement.js"></script>
-  <script src="js/models/bracket.js"></script>
-  <script src="js/models/golfer.js"></script>
-  <script src="js/models/golfer_achievement.js"></script>
-  <script src="js/models/bracket_golfer.js"></script>
-  <script src="js/models/country.js"></script>
-  <script src="js/controllers/achievements_index_controller.js"></script>
-  <script src="js/controllers/achievements_award_controller.js"></script>
-  <script src="js/controllers/brackets_edit_controller.js"></script>
-  <script src="js/routes/index_route.js"></script>
-  <script src="js/routes/achievements_index_route.js"></script>
-  <script src="js/routes/achievements_award_route.js"></script>
-  <script src="js/routes/brackets_edit_route.js"></script>
-  <script src="js/routes/brackets_show_route.js"></script>
-  <script src="js/views/flag_view.js"></script>
+  <script defer src="js/libs/jquery-1.9.1.js"></script>
+  <script defer src="js/libs/handlebars-1.0.0-rc.4.js"></script>
+  <script defer src="js/libs/ember-1.0.0-rc.6.js"></script>
+  <script defer src="js/libs/ember-data.js"></script>
+  <script defer src="js/libs/fastclick.js"></script>
+  <script defer src="js/app.js"></script>
+  <script defer src="js/translations.js"></script>
+  <script defer src="js/helpers/translate.js"></script>
+  <script defer src="js/helpers/select_field_helper.js"></script>
+  <script defer src="js/helpers/pluralize.js"></script>
+  <script defer src="js/models/achievement.js"></script>
+  <script defer src="js/models/bracket.js"></script>
+  <script defer src="js/models/golfer.js"></script>
+  <script defer src="js/models/golfer_achievement.js"></script>
+  <script defer src="js/models/bracket_golfer.js"></script>
+  <script defer src="js/models/country.js"></script>
+  <script defer src="js/controllers/achievements_index_controller.js"></script>
+  <script defer src="js/controllers/achievements_award_controller.js"></script>
+  <script defer src="js/controllers/brackets_edit_controller.js"></script>
+  <script defer src="js/routes/index_route.js"></script>
+  <script defer src="js/routes/achievements_index_route.js"></script>
+  <script defer src="js/routes/achievements_award_route.js"></script>
+  <script defer src="js/routes/brackets_edit_route.js"></script>
+  <script defer src="js/routes/brackets_show_route.js"></script>
+  <script defer src="js/views/flag_view.js"></script>
 
 </body>
 </html>
