--- a/public/index.html
+++ b/public/index.html
@@ -5,29 +5,36 @@
 <title>PGA Golf Challenge</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <link rel="stylesheet" href="css/bootstrap-responsive.css">
   <link rel="stylesheet" href="css/bootstrap.css">
+  <link rel="stylesheet" href="css/bootstrap-glyphicons.css">
   <link rel="stylesheet" href="css/style.css">
 </head>
-<body class="container-fluid">
+<body class="container">
 
   <script type="text/x-handlebars" data-template-name="application">
     <div class="navbar navbar-static-top">
-      <div class="navbar-inner">
-        <a class="brand" href="#">PGA Golf Challenge</a>
-        <ul class="nav">
-          <li><a href="#/brackets/1">Bracket</a></li>
-          <li><a href="#/achievements">Achievements</a></li>
+      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-responsive-collapse">
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+
+      <a class="navbar-brand" href="#">PGA Golf Challenge</a>
+
+      <div class="nav-collapse collapse navbar-responsive-collapse">
+        <ul class="nav navbar-nav">
+          <li data-toggle="collapse" data-target=".navbar-responsive-collapse"><a href="#/brackets/1">Bracket</a></li>
+          <li data-toggle="collapse" data-target=".navbar-responsive-collapse"><a href="#/achievements">Achievements</a></li>
         </ul>
       </div>
     </div>
 
-    <div class="row-fluid">
-      <div class="span2 hidden-phone"></div>
-      <div class="span12 main">
+    <div class="row">
+      <div class="col-2 hidden-phone"></div>
+      <div class="col-12 main">
         {{outlet}}
       </div>
-      <div class="span2 hidden-phone"></div>
+      <div class="col-2 hidden-phone"></div>
     </div>
   </script>
 
@@ -46,7 +53,7 @@
           </td>
           <td>
             <button class="btn btn-info pull-right" {{action "awardAchievement" achievement}}>
-              <i class="icon-star icon-white"></i><span class="hidden-phone-portrait"> Award</span>
+              <span class="glyphicon glyphicon-star"></span><span class="hidden-phone-portrait"> Award</span>
             </button>
           </td>
         </tr>
@@ -59,20 +66,21 @@
     <h3>Award Achievement</h3>
     <p class="text-center">{{translate achievement.key}}</p>
     {{#if controller.golfers.isLoaded}}
-    <div class="row-fluid">
-      <div class="span12">
-      {{select contentBinding="controller.golfers"
-               selectionBinding="controller.selectedGolfer"
-               optionValuePath="content.id"
-               optionLabelPath="content.name"}}
+    <div class="row">
+      <div class="form-group">
+        {{select class="form-control"
+                 contentBinding="controller.golfers"
+                 selectionBinding="controller.selectedGolfer"
+                 optionValuePath="content.id"
+                 optionLabelPath="content.name"}}
       </div>
     </div>
-    <div class="row-fluid">
-      <div class="span12">
-      <button class="btn btn-info" {{action "award"}}>
-        <i class="icon-star icon-white"></i> Award Achievement
-      </button>
-      <a class="btn" href="#/achievements">Cancel</a>
+    <div class="row">
+      <div class="form-group">
+        <button class="btn btn-info" {{action "award"}}>
+          <span class="glyphicon glyphicon-star"></span> Award Achievement
+        </button>
+        <a class="btn btn-default" href="#/achievements">Cancel</a>
       </div>
     </div>
     {{else}}
@@ -83,7 +91,7 @@
   <script type="text/x-handlebars" data-template-name="brackets/show">
     <h3>Your Bracket</h3>
     {{#linkTo brackets.edit model class="btn btn-primary top-action top-action-right"}}
-      <i class="icon-edit icon-white"></i> Edit
+      <span class="glyphicon glyphicon-edit"></span> Edit
     {{/linkTo}}
     <table class="table">
       <thead>
@@ -138,10 +146,10 @@
     {{/linkTo}}
 
     <div class="progress big">
-      <div class="bar bar-info" {{bindAttr style="controller.spentBarStyle"}}>
+      <div class="progress-bar progress-bar-info" {{bindAttr style="controller.spentBarStyle"}}>
         {{bracket.spent}} Points Spent
       </div>
-      <div class="bar bar-success" {{bindAttr style="controller.availableBarStyle"}}>
+      <div class="progress-bar progress-bar-success" {{bindAttr style="controller.availableBarStyle"}}>
         {{bracket.pointsAvailable}} Points Available
       </div>
     </div>
@@ -170,7 +178,7 @@
           </td>
           <td>
             <button class="btn btn-danger pull-right" {{action "removeGolfer" bracketGolfer}}>
-              <i class="icon-minus icon-white"></i><span class="hidden-phone-portrait"> Remove</span>
+              <span class="glyphicon glyphicon-minus"></span><span class="hidden-phone-portrait"> Remove</span>
             </button>
           </td>
           {{/with}}
@@ -183,7 +191,7 @@
 
       {{#unless controller.availableGolfers.isEmpty}}
       <h4>Available Golfers <small>({{controller.availableGolfers.length}})</small></h4>
-      {{input type="text" class="span12" placeholder="Search by name" valueBinding="controller.availableGolferFilter"}}
+      {{input type="text" class="form-control" placeholder="Search by name" valueBinding="controller.availableGolferFilter"}}
       <table class="table table-striped">
         <tbody>
       {{#each golfer in controller.availableGolfers}}
@@ -201,7 +209,7 @@
           </td>
           <td>
             <button class="btn btn-success pull-right" {{action "addGolfer" golfer}}>
-              <i class="icon-plus icon-white"></i><span class="hidden-phone-portrait"> Add</span>
+              <span class="glyphicon glyphicon-plus"></i><span class="hidden-phone-portrait"> Add</span>
             </button>
           </td>
         </tr>
@@ -219,6 +227,7 @@
   <script defer src="js/libs/ember-1.0.0-rc.6.js"></script>
   <script defer src="js/libs/ember-data.js"></script>
   <script defer src="js/libs/fastclick.js"></script>
+  <script defer src="js/libs/bootstrap.js"></script>
   <script defer src="js/app.js"></script>
   <script defer src="js/translations.js"></script>
   <script defer src="js/helpers/translate.js"></script>
